--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -9,6 +9,7 @@
   <body>
     <div class="main-content">
     {{>header}}
+    This site was created by Santiago Larrique. It uses data from mapbox.com and darksky.net!
     <img class="portrait" src="images/1.jpg" alt="" />
     </div>
     {{>footer}}
